# FastAPI-Stack-Pet-Project

./: .env  .gitignore  .gitlab-ci.yml  README.md  cookiecutter-config-file.yml  docker-compose.override.yml
backend/: .gitignore  (+2 more)
backend/app/: alembic.ini  prestart.sh  pyproject.toml
backend/app/alembic/versions/: 2022_12_20_0720-178607d97de1_initial.py  2022_12_28_0453-234a164ec00d_refactor_and_added_account_logic.py  2022_12_28_0858-54e4229fcbaa_transaction_log_refactor.py  2022_12_28_1115-2a8db1cc20e4_deposit.py
backend/app/app/: main.py
backend/app/app/api/: deps.py  filters.py  pagination.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: account.py  deposit.py  item_category.py  items.py  login.py  order.py  payment.py  payment_category.py  reviews.py  transaction.py  users.py  utils.py
backend/app/app/crud/: __init__.py  base.py  crud_account.py  crud_deposit.py  crud_item.py  crud_item_category.py  crud_order.py  crud_payment.py  crud_payment_category.py  crud_review.py  crud_role.py  crud_transaction.py  crud_user.py
backend/app/app/db/: base.py  base_class.py  events.py  init_db.py  session.py
backend/app/app/models/: __init__.py  account.py  auth.py  deposit.py  item.py  mixins.py  order.py  payment.py  review.py  transaction.py
backend/app/app/schemas/: __init__.py  account.py  auth.py  base.py  deposit.py  item.py  order.py  payment.py  review.py  transaction.py  user.py
backend/app/app/tests/utils/: user.py
backend/app/app/utils/: __init__.py  account.py  constants.py  enums.py  exceptions.py  messages.py
