[tool.poetry]
name = "jusan"
version = "0.1.0"
description = "Jusan pet-project backend"
authors = ["Daniil Koilybayev"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"
python-multipart = "^0.0.5"
requests = "^2.28.1"
celery = "^5.2.7"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.1.0"
pydantic = {version = "^1.10.2", extras = ["email"]}
raven = "^6.10.0"
gunicorn = "^20.1.0"
jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.0"
sqlalchemy = "^1.4.45"
pytest = "^7.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.3"
autoflake = "^2.0.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=1.3.1"]
build-backend = "poetry.masonry.api"

